Generate event listeners as hidden classes (#3467)